--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="./views/assest/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>RMS</title>
 </head>
 
@@ -30,62 +30,62 @@
                     </span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="./views/users.html">
+                <a href="./views/Users/users.html">
                     <span class="material-icons-sharp">
                         person
                     </span>
                     <h3>Users</h3>
                 </a>
-                <a href="./views/adduser.html">
+                <a href="./views/Users/adduser.html">
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New Users</h3>
                 </a>
-                <a href="./views/tables.html">
+                <a href="./views/Tables/tables.html">
                     <span class="material-icons-sharp">
                         table_restaurant
                     </span>
                     <h3>Tables</h3>
                 </a>
-                <a href="./views/category.html">
+                <a href="./views/Categorys/category.html">
                     <span class="material-icons-sharp">
                         category
                     </span>
                     <h3>Category</h3>
                 </a>
-                <a href="./views/products.html" >
+                <a href="./views/Products/products.html" >
                     <span class="material-icons-sharp">
                         inventory_2
                     </span>
                     <h3>Products</h3>
                 </a>
-                <a href="./views/addproduct.html" >
+                <a href="./views/Products/addproduct.html" >
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New product</h3>
                 </a>
-                <a href="./views/orders.html">
+                <a href="./views/Orders/orders.html">
                     <span class="material-icons-sharp">
                         list_alt
                     </span>
                     <h3>Orders</h3>
                     <span class="message-count">27</span>
                 </a>
-                <a href="./views/addorder.html">
+                <a href="./views/Orders/addorder.html">
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New order</h3>
                 </a>
-                <a href="./views/report.html">
+                <a href="./views/Raports/report.html">
                     <span class="material-icons-sharp">
                         report_gmailerrorred
                     </span>
                     <h3>Reports</h3>
                 </a>
-                <a href="./views/settings.html">
+                <a href="./views/Settings/settings.html">
                     <span class="material-icons-sharp">
                         settings
                     </span>
@@ -356,8 +356,8 @@
         </div>
         
 
-    <script src="./views/assest/scripts/orders.js"></script>
-    <script src="./views/assest/scripts/index.js"></script>
+    <script src="./assets/scripts/index.js"></script>
+    <script src="./assest/scripts/order.js"></script>
 </body>
 
 </html>
