--- a/web/login.html
+++ b/web/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <link rel="stylesheet" href="./views/assest/styles/login_style.css" >
+    <link rel="stylesheet" href="assets/styles/login_style.css" >
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
@@ -90,7 +90,7 @@
             <script>
               document.getElementById("loginButton").addEventListener("click", function() {
 
-                  window.location.href = "index.html";
+                  window.location.href = "/views/Dashboard/index.html";
               });
               </script>
           </div>
