fixed some bugs in the login page

--- a/web/login.html
+++ b/web/login.html
@@ -56,7 +56,7 @@
                   <div class="login">Login</div>
                   <input
                     class="hakeemdigitalcom"
-                    placeholder="hakeem@digital.com         "
+                    placeholder="email@example.com         "
                     type="text"
                   />
                 </div>
@@ -84,8 +84,7 @@
           </div>
           <div class="domicile-option">
             <div class="login1">
-              <button id="loginButton" class="button-fields"></button>
-              <div  class="login2">Login</div>
+              <button id="loginButton" class="button-fields">Login</button>
             </div>
             <script>
               document.getElementById("loginButton").addEventListener("click", function() {
